crates/toml/tests/snapshots/invalid/ext/table/append-with-dotted-keys-7.stderr
TOML parse error at line 5, column 7
  |
5 | apple.color = "red"
  |       ^^^^^
duplicate key
